--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- top margin navigation links to the other pages of my website -->
     <div class="nav_bar">
-    <a href="Index.html"> Home</a> |
+    <a href="index.html"> Home</a> |
         <a href="Discovery.html"> Discovery</a> |
         <a href="Learning_and_Projects.html"> Learning and Projects</a> |
         <a href="Contact_Me.html"> Contact Me</a>  
