--- a/discovery.html
+++ b/discovery.html
@@ -26,10 +26,10 @@
     </div>
       
     <div class="nav_bar">
-        <a href="Index.html"> Home</a> |
-        <a href="Discovery.html"> Discovery</a> |
-        <a href="Learning_and_Projects.html"> Learning and Projects</a> |
-        <a href="Contact_Me.html"> Contact Me</a> 
+        <a href="index.html"> Home</a> |
+        <a href="discovery.html"> Discovery</a> |
+        <a href="learning_and_projects.html"> Learning and Projects</a> |
+        <a href="contact_me.html"> Contact Me</a> 
     </div>
     
     <br>
