--- a/discovery.html
+++ b/discovery.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <video id="videobg" autoplay loop muted poster="../Projects/images/black.jpg">
-        <source src="../Projects/videos/smoke.mp4" type="video/mp4">
+    <video id="videobg" autoplay loop muted poster="../images/black.jpg">
+        <source src="../videos/smoke.mp4" type="video/mp4">
     </video>
 
     <div class="container_2">
@@ -64,7 +64,7 @@
     <div class="competencies">
         <h2>Competencies:</h2>
             <p>Ruby - HTML - CSS - Python</p>
-            <a href="Learning_and_Projects.html"> See some of my projects here!</a> 
+            <a href="learning_and_projects.html"> See some of my projects here!</a> 
     </div>
 
     <div class="goals">
@@ -74,13 +74,13 @@
 
     <div class="code_nation">
         <h2>Code Nation:</h2>
-        <img src="../Projects/images/2.jpeg">
+        <img src="../images/2.jpeg">
         <p>The Develop: Code course was well structured and consise. It is perfect for learning fundamentals and logic in programming langauges. time.</p>
     </div>
 
     <div class="challenges">
         <h2>Challenges:</h2>
-        <img src="../Projects/images/1.jpeg">
+        <img src="..images/1.jpeg">
         <p>Though solving problems on my own is enjoyable I tend to over-complicate concepts, this leads me to spend time simplifying implementtion, repeatedly reviweing code -- this is ineffiecient. My implentation and practical techniques need to improve for time contraints, programming can consume plenty of time when you have uncessesary, over-complicated elements and parameters in the code. This is something that was persistent in all my projects but more importantly, I identified it. There's a saying which goes...<br> 
         <br><i>"If you cannot explain it simply, you do not understand it fully." </i> I am confident that once I am fully orientated with syntax this habbit will not be an issue.</p>
     </div>
