--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 <!-- top margin navigation links to the other pages of my website -->
     <div class="nav_bar">
-    <a href="index.html"> Home</a> |
-        <a href="Discovery.html"> Discovery</a> |
-        <a href="Learning_and_Projects.html"> Learning and Projects</a> |
-        <a href="Contact_Me.html"> Contact Me</a>  
+        <a href="index.html"> Home</a> |
+        <a href="discovery.html"> Discovery</a> |
+        <a href="learning_and_projects.html"> Learning and Projects</a> |
+        <a href="contact_me.html"> Contact Me</a>  
     </div>
 
     <br>
