--- a/discovery.html
+++ b/discovery.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <video id="videobg" autoplay loop muted poster="../images/black.jpg">
-        <source src="../videos/smoke.mp4" type="video/mp4">
+    <video id="videobg" autoplay loop muted poster="images/black.jpg">
+        <source src="videos/smoke.mp4" type="video/mp4">
     </video>
 
     <div class="container_2">
@@ -46,7 +46,7 @@
 
     <div class="about_me">
         <h2>About Me:</h2>
-        <img src="../Projects/images/5.jpg">
+        <img src="images/5.jpg">
         <p>Over the year I have attended several coding courses learning remotelya and using online tools such as YouTube, Coursera, EDX and GitHub. My learning has included auditing courses from these sources to gain fundamental logic and basis for programming and solving problems.</p> 
         <br><p>I have a love for creativity and content consumption having spent most of my life around computers. The realization humans can create absurd, altruistic systems and technologies used day to day in supererogatory interests of technological advancemennt is euphoric.</p>
         <br><p>Whether it is the Data Scientists who gather information on chemicals and their particulate structures by working with scientists in preperation for a pandemic, or the Software Engineers who transcode that data into functional programs which unambiguously function to determine specific threats and mitigate risks, the sophistication and hard work behind such technologies ignite by passion for technology and computing.</p> 
@@ -74,13 +74,13 @@
 
     <div class="code_nation">
         <h2>Code Nation:</h2>
-        <img src="../images/2.jpeg">
+        <img src="images/2.jpeg">
         <p>The Develop: Code course was well structured and consise. It is perfect for learning fundamentals and logic in programming langauges. time.</p>
     </div>
 
     <div class="challenges">
         <h2>Challenges:</h2>
-        <img src="..images/1.jpeg">
+        <img src="images/1.jpeg">
         <p>Though solving problems on my own is enjoyable I tend to over-complicate concepts, this leads me to spend time simplifying implementtion, repeatedly reviweing code -- this is ineffiecient. My implentation and practical techniques need to improve for time contraints, programming can consume plenty of time when you have uncessesary, over-complicated elements and parameters in the code. This is something that was persistent in all my projects but more importantly, I identified it. There's a saying which goes...<br> 
         <br><i>"If you cannot explain it simply, you do not understand it fully." </i> I am confident that once I am fully orientated with syntax this habbit will not be an issue.</p>
     </div>
