--- a/discovery.html
+++ b/discovery.html
@@ -41,7 +41,7 @@
     <div class="introduction">
         <h2>Introduction:</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/JhHMJCUmq28?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        ><p>I believe Computer Science is a purposeful and necessary vocation epitomizing the human disposition and will to survive by blending creativity with practical application. At its core it is the human imagination realised providing solutions to future problems in the my present.</p>
+        <p>I believe Computer Science is a purposeful and necessary vocation epitomizing the human disposition and will to survive by blending creativity with practical application. At its core it is the human imagination realised providing solutions to future problems in the my present.</p>
     </div>
 
     <div class="about_me">
