--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   
-  <video id="videobg" autoplay loop muted poster="../images/black.jpg">
-    <source src="../videos/smoke.mp4" type="video/mp4">
+  <video id="videobg" autoplay loop muted poster="images/black.jpg">
+    <source src="videos/smoke.mp4" type="video/mp4">
 </video>
 
   <div class="container_1">
