--- a/learning_and_projects.html
+++ b/learning_and_projects.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <video id="videobg" autoplay loop muted poster="../images/black.jpg">
-        <source src="../videos/smoke.mp4" type="video/mp4">
+    <video id="videobg" autoplay loop muted poster="images/black.jpg">
+        <source src="videos/smoke.mp4" type="video/mp4">
     </video>
 
     <div class="container_3">
@@ -40,17 +40,17 @@
     
     <div class="week_1">
         <h1>Week 1</h1> 
-        <img src="../images/8.png">
-        <img src="../images/9.png">
-        <img src="../images/10.png">
-        <img src="../images/11.png">
+        <img src="images/8.png">
+        <img src="images/9.png">
+        <img src="images/10.png">
+        <img src="images/11.png">
         <p>In the first week I covered functions, methods, variables, if/else statements and pretty much everything you need to start building simple progrms. Being practical and writing code as frequently as possible whether you understand the syntax or not is the best way to learn a programming language, grudually it will start to make sense. Python syntax is almsot identical to Ruby so this made things very easy for me. I think this part is comfortable for everybody when they first try a new language, the logic is almost universal when it comes to code.</p>   
     </div>
 
     <div class="project_1">
         <h2>Project 1: Building A Digital ATM</h2>
-            <img src="../images/19.png">
-            <img src="../images/23.png">
+            <img src="images/19.png">
+            <img src="images/23.png">
             <p>This was an independedn project I took on to be more practical with my learning. Using what was covered in week 2 and the notes I took, I wanted to put into action a program that contained all the syntax and logic I had just learned. The result was a simple Cash Machine.</p>
 
             <h3>Try out my Virtual Cash Machine below:</h3>
@@ -63,16 +63,17 @@
     <div class="week_2">
         <h1>Week 2</h1>   
             <p>Lists were introduced where we covered arrays, sorting and iterating methods. Loops were covered to expand lessons on conditional operation. I decided on taking very detailed notes as the intricay of loop methods was quite complex although simple in logic.</p>
-            <img src="../images/11.png">
-            <img src="../images/13.png"><br>
-            <img src="../images/14.png"> <img src="../Projects/images/15.png"> 
+            <img src="images/11.png">
+            <img src="images/13.png">
+            <img src="images/14.png"> 
+            <img src="images/15.png"> 
             ><p>Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry.</p>
     </div>
 
     <div class="project_2">
         <h2>Project 2: Building A Code Based Text Game</h2>
-            <img src="../images/20.png"> 
-            <img src="../images/21.png">
+            <img src="images/20.png"> 
+            <img src="images/21.png">
             <p>We based the concept of our game on the assasination of US President J.F. Kennedy. The story was built around historical record and accounts. You play as the President, then as his would be killer Lee Harvey Oswald tryong to make the best decision you can to expose the conspiracy aginst you masterminded by the powers that be.</p><br>
 
             <h3>Think you can survive? Go ahead and play The Conspiracy below:</h3>
@@ -89,16 +90,16 @@
 
     <div class="project_3">
         <h2>Project 3: Building A Website</h2>
-            <img src="../planning/plan_1.jpg">
-            <img src="../planning/plan_2.png">
+            <img src="planning/plan_1.jpg">
+            <img src="planning/plan_2.png">
             <p>Designing a website is like going to a Coffee Shop and asking for a hot drink, you then get asked if you want a Caffe Verona but you have no idea what that is. Settling on idea at least for me was the hardest thing to do, I procrastinated for days. Eventually I realized I was complicationg things again and settled in the simplest yet most relevant idea. Lets hope you liked it!
     </div>
 
     <div class="website">      
-        <img src="../images/26.png">
-        <img src="../images/27.png">
-        <img src="../images/28.png">
-        <img src="../images/29.png"><br> 
+        <img src="images/26.png">
+        <img src="images/27.png">
+        <img src="images/28.png">
+        <img src="images/29.png"><br> 
 
         <p>That is it for everything I covered on the Develop: Code course with Code Nation. That was a Behind The Scenes peak into this website before it went live, but now that you're using it - it isn't bad right?</p>
     </div>
