--- a/learning_and_projects.html
+++ b/learning_and_projects.html
@@ -67,7 +67,9 @@
             <img src="images/13.png">
             <img src="images/14.png"> 
             <img src="images/15.png"> 
-            ><p>Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry.</p>
+            ><p>Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry.<br>
+            Here is a presentation telling you more about the game:</p>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSqgE6AzzSpM8kwdp5CPbJQ7P0c-wBEDfp5rGPF6obl47KINmmeFb_MdROA56e7b9nSdArH0S3Lzg7N/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
 
     <div class="project_2">
