--- a/learning_and_projects.html
+++ b/learning_and_projects.html
@@ -59,7 +59,7 @@
         <h1>Week 2</h1>   
             <p>Lists were introduced where we covered arrays, sorting and iterating methods. Loops were covered to expand lessons on conditional operation. I decided on taking very detailed notes as the intricay of loop methods was quite complex although simple in logic.</p>
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQM1_GvAZzTTRVkkxM_H_2pYF8SzGnuGGKqB1frYV-ywAvZDKxYZIcHqfcX2laGscjN-q7h7ceQok_e/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            ><p>Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry</p>
+            <p>Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry</p>
             
     </div>
 
@@ -77,7 +77,7 @@
 
     <div class="week_3">
         <h1>Week 3</h1>   
-            <p>Probably the most exahusasting of the week, the last leg of the course. HTML and CSS was introduced and we stepped into Web Development. Due to the linear syntax of HTML is was very easy to graps and familiarise however, like most people CSS was... annoying. Its syntax has an annoying curce with too many layers, unlike Python is is very customizable and can be off-putting. Once I understoof the genral logic in the syntax using tutorial and tools to build projects became easy. I found the best way to work with CSS is to not complicate things.</p>  
+            <p>Probably the most exhausasting of the week, the last leg of the course. HTML and CSS was introduced and we stepped into Web Development. Due to the linear syntax of HTML is was very easy to graps and familiarise however, like most people CSS was... annoying. Its syntax has an annoying curce with too many layers, unlike Python is is very customizable and can be off-putting. Once I understoof the genral logic in the syntax using tutorial and tools to build projects became easy. I found the best way to work with CSS is to not complicate things.</p>  
     </div>
 
     <div class="project_3">
