--- a/discovery.html
+++ b/discovery.html
@@ -60,34 +60,16 @@
         <a href="https://en.wikipedia.org/wiki/Deep_learning" target="_blank"> Deep Learning </a>,
         <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank"> Machine Learning </a>
         </p>
-    </div>
-
-    <div class="competencies">
-        <h2>Competencies:</h2>
-            <p>Ruby - HTML - CSS - Python</p>
-            <a href="learning_and_projects.html"> See some of my projects here!</a> 
-    </div>
-
-    <div class="goals">
-        <h2>Goals:</h2>
-        <p>As of publishing this website I have been familiarised with the following programming languages; Python, HTML and CSS. Going forward I want to add JavaScript, Swift and C++ to the list.</p>
+        <a href="learning_and_projects.html"> See some of my projects here!</a> 
     </div>
 
     <div class="code_nation">
         <h2>Code Nation:</h2>
         <img src="images/2.jpeg">
-        <p>The Develop: Code course was well structured and consise. It is perfect for learning fundamentals and logic in programming langauges. time.</p>
-    </div>
-
-    <div class="challenges">
-        <h2>Challenges:</h2>
+        <p>The Develop: Code course was well structured and consise. It is perfect for learning fundamentals and logic in programming langauges. As of publishing this website I have been familiarised with the following programming languages; Python, HTML and CSS. Going forward I want to add JavaScript, Swift and C++ to the list</p>
         <img src="images/1.jpeg">
         <p>Though solving problems on my own is enjoyable I tend to over-complicate concepts, this leads me to spend time simplifying implementtion, repeatedly reviweing code -- this is ineffiecient. My implentation and practical techniques need to improve for time contraints, programming can consume plenty of time when you have uncessesary, over-complicated elements and parameters in the code. This is something that was persistent in all my projects but more importantly, I identified it. There's a saying which goes...<br> 
         <br><i>"If you cannot explain it simply, you do not understand it fully." </i> I am confident that once I am fully orientated with syntax this habbit will not be an issue.</p>
-    </div>
-
-    <div class="prospects">
-        <h2>Prospects:</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/reY50t2hbuM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Java Script is a universal Full Stack package I want to learn to build amazing applications and websites but due to my interests in Data Science; Artificial Intelligence, Deep Learning and Machine Learning, Python will be my speciality. The Develop: Code course with Code Nation was ideal.</p>
     </div>
