--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <br>
     <br>
     <div class="wrapper">
-      <div class="static-txt">Oh, hello there</div>
+      <div class="static-txt">Oh, hello there...</div>
       <ul class="dynamic-txts">
-        <li><span>GENIUS (@-@)</span></li>
-        <li><span>CREATOR (^_^)</span></li>
-        <li><span>STUDENT (=_=)</span></li>
-        <li><span>DEVELOPER \(^o^)/ </span></li>
+        <li><span>Genius <(@-@<)</span></li>
+        <li><span>Creator (>^_^)></span></li>
+        <li><span>Student <(=_=<)</span></li>
+        <li><span>Developer (>G_G)> </span></li>
       </ul>
     </div
     <br>
