--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
         <a href="index.html"> Home</a> |
         <a href="discovery.html"> Discovery</a> |
         <a href="learning_and_projects.html"> Learning and Projects</a> |
-        <a href="contact_me.html"> Contact Me</a> 
+        <a href="contact.html"> Contact Me</a> 
     </div>
 
     <br>
