--- a/contact_me.html
+++ b/contact_me.html
@@ -26,8 +26,8 @@
     <div class="nav_bar">
         <a href="index.html"> Home</a>| 
         <a href="discovery.html"> Discovery</a>|
-        <a href="learning_and_projects.html"> Learning and Projects</a>|
-        <a href="contact_me.html"> Contact Me</a>
+        <a href="projects.html"> Learning and Projects</a>|
+        <a href="contact.html"> Contact Me</a>
     </div>
     
     <br>
