--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
     </div>
 
     <div class="nav_bar">
-        <a href="index.html"> Home</a>| 
-        <a href="discovery.html"> Discovery</a>|
-        <a href="projects.html"> Learning and Projects</a>|
-        <a href="contact.html"> Contact Me</a>
+        <a href="index.html">Home</a>| 
+        <a href="discovery.html">Discovery</a>|
+        <a href="projects.html">Projects</a>|
+        <a href="contact.html">Contact Me</a>
     </div>
     
     <br>
