--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 <!-- top margin navigation links to the other pages of my website -->
     <div class="nav_bar">
-        <a href="index.html"> Home</a> |
-        <a href="discovery.html"> Discovery</a> |
-        <a href="projects.html"> Learning and Projects</a> |
-        <a href="contact.html"> Contact Me</a>  
+        <a href="index.html">Home</a> |
+        <a href="discovery.html">Discovery</a> |
+        <a href="projects.html">Projects</a> |
+        <a href="contact.html">Contact Me</a>  
     </div>
 
     <br>
