--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <div class="wrapper">
       <div class="static-txt">Oh, hello there...</div>
       <ul class="dynamic-txts">
-        <li><span>Web Developer <(@-@<)</span></li>
-        <li><span>Software Engineer (>^_^)></span></li>
+        <<li><span>Web Developer <(^_^<)</span></li>
+        <li><span>Software Engineer (>+_+)></span></li>
         <li><span>ML and AI Expert <(=_=<)</span></li>
-        <li><span>Data Scientist (>G_G)></span></li>
+        <li><span>Data Scientist (>0_0)></span></li>
       </ul>
     </div
     <br>
