--- a/index.html
+++ b/index.html
@@ -35,47 +35,36 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <div class="wrapper">
       <div class="static-txt">Oh, hello there...</div>
-      <ul class="dynamic-txts">
-        <<li><span>Web Developer <(^_^<)</span></li>
-        <li><span>Software Engineer (>+_+)></span></li>
-        <li><span>ML and AI Expert <(=_=<)</span></li>
-        <li><span>Data Scientist (>0_0)></span></li>
-      </ul>
-    </div
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    
+        <ul class="dynamic-txts">
+          <li><span>Web Developer <(^_^<)</span></li>
+          <li><span>Software Engineer (>+_+)></span></li>
+          <li><span>ML and AI Expert <(=_=<)</span></li>
+          <li><span>Data Scientist (>0_0)></span></li>
+        </ul>
+      </div>
+    </div> 
 
-  <!-- An brief message explaining the purpose on the website on the homepage -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <div class="homepage_introduction">
-      <p>This website completes my 3 week Develop: Code course with Code Nation.</p>
-      <p>It marks my first attempt at ever building a website, my second project on the course and my final submission on the course. I have used everything I currently know on programming with HTML and CSS syntax into building this site, it was an independednt effort so I hope you enjoy navigating the website and seeing a little of what I have been doing the past few weeks...<br>
-      <br><br>(Recommended Browsers - Chrome, Firefox)<br><br><br> - Sasha Valentine</p>
+      <!-- An brief message explaining the purpose on the website on the homepage: -->
+      <p>This website completes my first ever JavaScript Deployment.
+        <br>
+        <br>
+          It marks my first attempt at ever building a website, my second project on the course and my final submission on the course. I have used everything I currently know on programming with HTML and CSS syntax into building this site, it was an independednt effort so I hope you enjoy navigating the website and seeing a little of what I have been doing the past few weeks...
+        <br>
+        <br>
+          (Recommended Browsers - Chrome, Firefox)
+        <br>
+        <br>
+          - Sasha Valentine</p>
       </div>
 
     <br>
@@ -83,14 +72,9 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
-    <!-- links to other webistes which may be realted to me like social media -->
     <div class="follow_me">
+      <!-- links to other webistes which may be realted to me like social media -->
       <a href="http://www.linkedin.com" target="_blank"> LinkedIn</a>|
       <a href="http://www.github.com" target="_blank"> GitHub</a>|
       <a href="http://www.discord.com" target="_blank"> Discord</a>
