--- a/projects.html
+++ b/projects.html
@@ -41,59 +41,41 @@
     <div class="week_1">
         <h1>Week 1</h1> 
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQYG2DxPpas5AUIOnFFqz9JKabQ4eVks20IpmdwKj1YuR4mGiOAA0SbcJhXl5fjpj1LJqds_tfVaYxG/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-        <p>In the first week I covered functions, methods, variables, if/else statements and pretty much everything you need to start building simple progrms. Being practical and writing code as frequently as possible whether you understand the syntax or not is the best way to learn a programming language, grudually it will start to make sense. Python syntax is almsot identical to Ruby so this made things very easy for me. I think this part is comfortable for everybody when they first try a new language, the logic is almost universal when it comes to code.</p>   
-    </div>
+        <p>In the first week I covered functions, methods, variables, if/else statements and pretty much everything you need to start building simple progrms. Being practical and writing code as frequently as possible whether you understand the syntax or not is the best way to learn a programming language, grudually it will start to make sense. Python syntax is almsot identical to Ruby so this made things very easy for me. I think this part is comfortable for everybody when they first try a new language, the logic is almost universal when it comes to code.
 
-    <div class="project_1">
-        <h2>Project 1: Building A Digital ATM</h2>
-            <p>This was an independedn project I took on to be more practical with my learning. Using what was covered in week 2 and the notes I took, I wanted to put into action a program that contained all the syntax and logic I had just learned. The result was a simple Cash Machine.</p>
+    <h2>Project 1: Building A Digital ATM</h2>
+        This was an independedn project I took on to be more practical with my learning. Using what was covered in week 2 and the notes I took, I wanted to put into action a program that contained all the syntax and logic I had just learned. The result was a simple Cash Machine.</p>
 
-            <h3>Try out my Virtual Cash Machine below:</h3>
-    </div>
-
-    <div class="cash_machine">      
+    <h3>Try out my Virtual Cash Machine below:</h3>
         <iframe src="https://trinket.io/embed/python/eb06b48100?outputOnly=true&runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     </div>
 
     <div class="week_2">
         <h1>Week 2</h1>   
-            <p>Lists were introduced where we covered arrays, sorting and iterating methods. Loops were covered to expand lessons on conditional operation. I decided on taking very detailed notes as the intricay of loop methods was quite complex although simple in logic.</p>
-            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQM1_GvAZzTTRVkkxM_H_2pYF8SzGnuGGKqB1frYV-ywAvZDKxYZIcHqfcX2laGscjN-q7h7ceQok_e/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            <p>Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry</p>
-            
-    </div>
+        <p>Lists were introduced where we covered arrays, sorting and iterating methods. Loops were covered to expand lessons on conditional operation. I decided on taking very detailed notes as the intricay of loop methods was quite complex although simple in logic.
 
-    <div class="project_2">
-        <h2>Project 2: Building A Code Based Text Game</h2>
-            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSqgE6AzzSpM8kwdp5CPbJQ7P0c-wBEDfp5rGPF6obl47KINmmeFb_MdROA56e7b9nSdArH0S3Lzg7N/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            <p>Above is a presentation telling you more about the game. We based the concept of our game on the assasination of US President J.F. Kennedy. The story was built around historical record and accounts. You play as the President, then as his would be killer Lee Harvey Oswald tryong to make the best decision you can to expose the conspiracy aginst you masterminded by the powers that be.</p>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQM1_GvAZzTTRVkkxM_H_2pYF8SzGnuGGKqB1frYV-ywAvZDKxYZIcHqfcX2laGscjN-q7h7ceQok_e/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-            <h3>Think you can survive? Go ahead and play The Conspiracy below:</h3>
-    </div>
+        Using what we had learned in weeks 1 and 2, I was paired with colleagues and tasked to build a Text-Based Game using Python. New tools were introduced and the power of Slack was discovered. Among these tools was Draw.io a web platform which allows collaboration on project planning via Flow Charts and Trello, used for project board planning. The objective was simple, work together and familiarise working as a team in line with industry
 
-    <div class="code_based_text_game">    
+    <h2>Project 2: Building A Code Based Text Game</h2>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSqgE6AzzSpM8kwdp5CPbJQ7P0c-wBEDfp5rGPF6obl47KINmmeFb_MdROA56e7b9nSdArH0S3Lzg7N/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        Above is a presentation telling you more about the game. We based the concept of our game on the assasination of US President J.F. Kennedy. The story was built around historical record and accounts. You play as the President, then as his would be killer Lee Harvey Oswald tryong to make the best decision you can to expose the conspiracy aginst you masterminded by the powers that be.</p>
+
+        <h3>Think you can survive? Go ahead and play The Conspiracy below:</h3>
         <iframe src="https://trinket.io/embed/python/b82b62c271?outputOnly=true&runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     </div>
 
     <div class="week_3">
         <h1>Week 3</h1>   
-            <p>Probably the most exhausasting of the week, the last leg of the course. HTML and CSS was introduced and we stepped into Web Development. Due to the linear syntax of HTML is was very easy to graps and familiarise however, like most people CSS was... annoying. Its syntax has an annoying curce with too many layers, unlike Python is is very customizable and can be off-putting. Once I understoof the genral logic in the syntax using tutorial and tools to build projects became easy. I found the best way to work with CSS is to not complicate things.</p>  
-    </div>
-
-    <div class="project_3">
+        <p>Probably the most exhausasting of the week, the last leg of the course. HTML and CSS was introduced and we stepped into Web Development. Due to the linear syntax of HTML is was very easy to graps and familiarise however, like most people CSS was... annoying. Its syntax has an annoying curce with too many layers, unlike Python is is very customizable and can be off-putting. Once I understoof the genral logic in the syntax using tutorial and tools to build projects became easy. I found the best way to work with CSS is to not complicate things. 
+        
         <h2>Project 3: Building A Website</h2>
-            <p>Designing a website is like going to a Coffee Shop and asking for a hot drink, you then get asked if you want a Caffe Verona but you have no idea what that is. Settling on idea at least for me was the hardest thing to do, I procrastinated for days. Eventually I realized I was complicationg things again and settled in the simplest yet most relevant idea. Lets hope you liked it!</p>
-    </div>
+        Designing a website is like going to a Coffee Shop and asking for a hot drink, you then get asked if you want a Caffe Verona but you have no idea what that is. Settling on idea at least for me was the hardest thing to do, I procrastinated for days. Eventually I realized I was complicationg things again and settled in the simplest yet most relevant idea. Lets hope you liked it!
 
-    <div class="website">      
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTYaEgpa5TJ7yagKAolzl3Ah1a-3EOWDb8HH-IDFoxSvyKJ4QZiUO9vu4qIMNdvzQjqGLeG0eSD86WD/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-        <p>That is it for everything I covered on the Develop: Code course with Code Nation. That was a Behind The Scenes peak into this website before it went live, but now that you're using it - it isn't bad right?</p>
-    </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+        That is it for everything I covered on the Develop: Code course with Code Nation. That was a Behind The Scenes peak into this website before it went live, but now that you're using it - it isn't bad right?</p>
+    </div>
 </body>
 </html>
