--- a/index.html
+++ b/index.html
@@ -11,41 +11,28 @@
     <source src="videos/smoke.mp4" type="video/mp4">
 </video>
 
-  <div class="container_1">
-    <div class="box nav_bar"></div>
-    <div class="box homepage_introduction"></div>
-    <div class="box follow_me"></div>
+  <div id="navbarContainer">
+    <nav id="navbar">
+        <a href="#home" id="navbarLogo">Prxncx.</a>
+        <div id="navbarLinks">
+            <a href="index.html" class="navbarLink">Home</a>
+            <a href="discovery.html" class="navbarLink">Discover</a>
+            <a href="projects.html" class="navbarLink">Projects</a>
+            <a href="contact.html" class="navbarLink">Contact</a>
+        </div>
+    </nav>
   </div>
 
-<!-- top margin navigation links to the other pages of my website -->
-    <div class="nav_bar">
-        <a href="index.html">Home</a> |
-        <a href="discovery.html">Discovery</a> |
-        <a href="projects.html">Projects</a> |
-        <a href="contact.html">Contact Me</a>  
+  <div class="wrapper">
+    <div class="static-txt">Hello visitor, I am a</div>
+      <ul class="dynamic-txts">
+        <li><span>Web Developer <(^_^<)</span></li>
+        <li><span>Software Engineer (>e_e)></span></li>
+        <li><span>ML and AI Student <(=_=<)</span></li>
+        <li><span>Data Scientist (>a_a)></span></li>
+      </ul>
     </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <div class="wrapper">
-      <div class="static-txt">Oh, hello there...</div>
-        <ul class="dynamic-txts">
-          <li><span>Web Developer <(^_^<)</span></li>
-          <li><span>Software Engineer (>+_+)></span></li>
-          <li><span>ML and AI Expert <(=_=<)</span></li>
-          <li><span>Data Scientist (>0_0)></span></li>
-        </ul>
-      </div>
-    </div> 
+  </div> 
 
     <br>
     <br>
@@ -64,7 +51,6 @@
           (Recommended Browsers - Chrome, Firefox)
         <br>
         <br>
-          - Sasha Valentine</p>
       </div>
 
     <br>
