--- a/discovery.html
+++ b/discovery.html
@@ -25,12 +25,17 @@
         <div class="box prospects"></div>
     </div>
       
-    <div class="nav_bar">
-        <a href="index.html">Home</a> |
-        <a href="discovery.html">Discovery</a> |
-        <a href="projects.html">Projects</a> |
-        <a href="contact.html">Contact Me</a> 
-    </div>
+    <<div id="navbarContainer">
+        <nav id="navbar">
+            <a href="#home" id="navbarLogo">Prxncx.</a>
+            <div id="navbarLinks">
+                <a href="index.html" class="navbarLink">Home</a>
+                <a href="discovery.html" class="navbarLink">Discover</a>
+                <a href="projects.html" class="navbarLink">Projects</a>
+                <a href="contact.html" class="navbarLink">Contact</a>
+            </div>
+        </nav>
+      </div>
     
     <div class="introduction">
         <h2>Introduction:</h2>
