--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
       </div>
-    
+  <section>
     <br>
     <br>
     <br>
@@ -116,5 +116,8 @@
             <li>You may not, except with our express written permission, distribute or commercially exploit the content. Nor may you transmit it or store it in any other website or other form of electronic retrieval system.</li>
           </ul>
         </div>
+  </section>
+  <br>
+  <br>
 </body>
 </html>
