--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
   </div>
-
+<section>
   <div class="wrapper">
     <div class="static-txt">Hello visitor, I am a</div>
       <ul class="dynamic-txts">
@@ -65,5 +65,6 @@
       <a href="http://www.github.com" target="_blank"> GitHub</a>|
       <a href="http://www.discord.com" target="_blank"> Discord</a>
   </div>
+</section>  
 </body>
 </html>
