--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-  <video id="videobg" autoplay loop muted poster="images/black.jpg">
-    <source src="videos/smoke.mp4" type="video/mp4">
-</video>
-
-<!-- navbar -->
-<div id="container">
-    <nav id="navbar">
-        <a href="#home" id="navbarLogo">Prxncx.</a>
-        <div id="navbarLinks">
-            <a href="#home" class="navbarLink">Home</a>
-            <a href="#discover" class="navbarLink">Discover</a>
-            <a href="#projects" class="navbarLink">Projects</a>
-            <a href="#contact" class="navbarLink">Contact</a>
-        </div>
-    </nav>
-
-    <!-- 1 home -->
+    <!-- videobg -->
+    <video id="videobg" autoplay loop muted poster="images/black.jpg">
+        <source src="videos/smoke.mp4" type="video/mp4">
+    </video>
+    <!-- navbar -->
+    <div id="container">
+        <nav id="navbar">
+            <a href="#home" id="navbarLogo">Prxncx.</a>
+            <div id="navbarLinks">
+                <a href="#home" class="navbarLink">Home</a>
+                <a href="#discover" class="navbarLink">Discover</a>
+                <a href="#projects" class="navbarLink">Projects</a>
+                <a href="#contact" class="navbarLink">Contact</a>
+            </div>
+        </nav>
+        <!-- 1 home -->
         <section id="home">
             <br>
             <br>
@@ -45,13 +43,11 @@
                     </ul>
                 </div>
             </div>
-
             <br>
             <br>
             <br>
             <br>
             <br>
-
             <div class="homepage_introduction">
                 <!-- An brief message explaining the purpose on the website on the homepage: -->
                 <p>This website completes my first ever JavaScript Deployment.
@@ -63,24 +59,21 @@
                     (Recommended Browsers - Chrome, Firefox)
                     <br>
                     <br>
-                </div>
-
+            </div>
                 <br>
                 <br>
                 <br>
                 <br>
                 <br>
-
             <div class="follow_me">
                 <!-- links to other webistes which may be realted to me like social media -->
                 <a href="http://www.linkedin.com" target="_blank"> LinkedIn</a>|
                 <a href="http://www.github.com" target="_blank"> GitHub</a>|
                 <a href="http://www.discord.com" target="_blank"> Discord</a>
-            <br>
-            <br>
+                <br>
+                <br>
             </div>
         </section>  
-
         <!-- discover -->
         <section id="discover">
             <br>
@@ -113,7 +106,7 @@
                 <br>
                 Whether it is the Data Scientists who gather information on chemicals and their particulate structures by working with scientists in preperation for a pandemic, or the Software Engineers who transcode that data into functional programs which unambiguously function to determine specific threats and mitigate risks, the sophistication and hard work behind such technologies ignite by passion for technology and computing.</p> 
             </div>
-
+            <!--  -->
             <div class="interests">
                 <h2>Interests:</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/WXuK6gekU1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -125,38 +118,35 @@
                 </p>
                 <a href="learning_and_projects.html"> See some of my projects here!</a> 
             </div>
-    <br>
-    <br>
-    
+            <br>
+            <br>
+            <!--  -->
             <div class="code_nation">
                 <h2>Code Nation:</h2>
-                <img src="images/2.jpeg">
-                    <br>
-                <p>The Develop: Code course was well structured and consise. It is perfect for learning fundamentals and logic in programming langauges. As of publishing this website I have been familiarised with the following programming languages; Python, HTML and CSS. Going forward I want to add JavaScript, Swift and C++ to the list.
-                <img src="images/1.jpeg">
+                    <img src="images/2.jpeg">
+                <br>
+                    <p>The Develop: Code course was well structured and consise. It is perfect for learning fundamentals and logic in programming langauges. As of publishing this website I have been familiarised with the following programming languages; Python, HTML and CSS. Going forward I want to add JavaScript, Swift and C++ to the list.
+                    <img src="images/1.jpeg">
                 <br>
                 <br>
-                Though solving problems on my own is enjoyable I tend to over-complicate concepts, this leads me to spend time simplifying implementtion, repeatedly reviweing code -- this is ineffiecient. My implentation and practical techniques need to improve for time contraints, programming can consume plenty of time when you have uncessesary, over-complicated elements and parameters in the code. This is something that was persistent in all my projects but more importantly, I identified it. There's a saying which goes...
+                    Though solving problems on my own is enjoyable I tend to over-complicate concepts, this leads me to spend time simplifying implementtion, repeatedly reviweing code -- this is ineffiecient. My implentation and practical techniques need to improve for time contraints, programming can consume plenty of time when you have uncessesary, over-complicated elements and parameters in the code. This is something that was persistent in all my projects but more importantly, I identified it. There's a saying which goes...
                 <br> 
                 <br>
-                <i>"If you cannot explain it simply, you do not understand it fully." </i> 
-                I am confident that once I am fully orientated with syntax this habbit will not be an issue.</p>
+                    <i>"If you cannot explain it simply, you do not understand it fully." </i> 
+                    I am confident that once I am fully orientated with syntax this habbit will not be an issue.
+                </p>
 
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/reY50t2hbuM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <br>
                 <br>
-                <p>Java Script is a universal Full Stack package I want to learn to build amazing applications and websites but due to my interests in Data Science; Artificial Intelligence, Deep Learning and Machine Learning, Python will be my speciality. The Develop: Code course with Code Nation was ideal.</p>
+                <p>
+                    Java Script is a universal Full Stack package I want to learn to build amazing applications and websites but due to my interests in Data Science; Artificial Intelligence, Deep Learning and Machine Learning, Python will be my speciality. The Develop: Code course with Code Nation was ideal.
+                </p>
                 <br>
                 <br>
             </div>
         </section>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
+        <!--  -->
         <section id="projects">
             <br>
             <br>
@@ -223,8 +213,7 @@
             <br>
             </div>
         </section>
-
-    <!-- contact -->
+        <!-- contact -->
         <section id="contact">
             <br>
             <br>
@@ -273,7 +262,7 @@
                     <br>
                     Every effort is made to keep the website up and running smoothly. However, [business name] takes no responsibility for, and will not be liable for, the website being temporarily unavailable due to technical issues beyond our control.</p>
             </div>
-
+            <!--  -->
             <div>
                 <ul class="ts_and_cs"> 
                 <h4>Website Terms and Conditions:</h4>
@@ -294,7 +283,7 @@
                     <li>Your use of this website and any dispute arising out of such use of the website is subject to the laws of England, Northern Ireland, Scotland and Wales.</li>
                 </ul>
             </div>
-
+            <!--  -->
             <div>
                 <ul class="copyright">
                 <h4s>Copyright:</h4>
