--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#home" class="navbarLink">Home</a>
                 <a href="#discover" class="navbarLink">Discover</a>
                 <a href="#projects" class="navbarLink">Projects</a>
-                <a href="#contact" class="navbarLink">Contact</a>
+                <a href="#about" class="navbarLink">About</a>
             </div>
         </nav>
 
