--- a/index.html
+++ b/index.html
@@ -141,9 +141,8 @@
                 </p>
                 <a href="learning_and_projects.html"> See some of my projects here!</a> 
             </div>
-    <br>
-    <br>
-    
+            <br>
+            <br>
             <div class="code_nation">
                 <h2>Code Nation:</h2>
                 <img src="images/2.jpeg">
@@ -166,13 +165,11 @@
                 <br>
             </div>
         </section>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <section id="projects">
             <br>
             <br>
@@ -239,9 +236,8 @@
             <br>
             </div>
         </section>
-
-    <!-- contact -->
-        <section id="contact">
+        <!-- about -->
+        <section id="about">
             <br>
             <br>
             <br>
@@ -289,7 +285,6 @@
                     <br>
                     Every effort is made to keep the website up and running smoothly. However, [business name] takes no responsibility for, and will not be liable for, the website being temporarily unavailable due to technical issues beyond our control.</p>
             </div>
-
             <div>
                 <ul class="ts_and_cs"> 
                 <h4>Website Terms and Conditions:</h4>
@@ -310,7 +305,6 @@
                     <li>Your use of this website and any dispute arising out of such use of the website is subject to the laws of England, Northern Ireland, Scotland and Wales.</li>
                 </ul>
             </div>
-
             <div>
                 <ul class="copyright">
                 <h4s>Copyright:</h4>
